| Summary: | ASTERISK-22089: res_sip - Need log message indicating when Asterisk fails to find an AOR to match an inbound registration | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-07-17 10:12:48 | Date Closed: | 2013-08-20 10:36:01 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | Frequency of Occurrence | Constant | |
| Related Issues: | |||
| Environment: | trunk | Attachments: | |
| Description: | Need log message indicating when Asterisk fails to find an AOR to match an inbound registration.
I didn't see any verbose, error, warning or debug messages for this. | ||
| Comments: | |||