Add warning messages for registration failure paths.

(closes issue ASTERISK-22089)
reported by Rusty Newton
patches:
	patch1.txt uploaded by John Bigelow (License #5091)



git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@397108 65c4cc65-6c06-0410-ace0-fbb531ad65f3